--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My first full stack project",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "NODE_ENV=production node server/server.js",
+    "start": "NODE_ENV=production nodemon server/server.js",
     "build": "webpack",
     "dev": "NODE_ENV=production node server/server.js | NODE_ENV=development webpack-dev-server --open"
   },
