--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "pg": "^4.5.7",
     "react": "^16.8.3",
     "react-dom": "^16.3.1",
-    "request-promise": "^4.2.4"
+    "react-router-dom": "^4.3.1",
+    "request-promise": "^4.2.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "webpack": "^4.29.6",
