--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "webpack",
-    "dev": "NODE_ENV=production node server/server.js | NODE_ENV=development webpack-dev-server --open"
+    "build-dev": "NODE_ENV=development webpack-dev-server --open",
+    "dev": "NODE_ENV=production npm-run-all --parallel start build-dev"
   },
   "author": "Parker Allen",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
     "pg": "^4.5.7",
     "react": "^16.8.3",
     "react-dom": "^16.3.1",
