--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
